--- a/src/.env.example
+++ b/src/.env.example
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=mysql_currency
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=currency_pusher
+DB_USERNAME=laravel
+DB_PASSWORD=doybHQvrfa8M2sRkKjTb
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
